# XS-VLM-OCR

./: .gitignore  CMakeLists.txt  README.md  app.rc  models_config.json
src/: main.cpp
src/adapters/: CustomAdapter.cpp  CustomAdapter.h  DoubaoAdapter.cpp  DoubaoAdapter.h  GLMAdapter.cpp  GLMAdapter.h  GeminiAdapter.cpp  GeminiAdapter.h  GeneralAdapter.cpp  GeneralAdapter.h  PaddleAdapter.cpp  PaddleAdapter.h  QwenAdapter.cpp  QwenAdapter.h  TesseractAdapter.cpp  TesseractAdapter.h
src/core/: HistoryItem.h  ModelAdapter.h  OCRPipeline.cpp  OCRPipeline.h  OCRResult.h
src/managers/: ClipboardManager.cpp  ClipboardManager.h  HistoryManager.cpp  HistoryManager.h  ModelManager.cpp  ModelManager.h
src/ui/: MainWindow.cpp  MainWindow.h  ScreenshotSelector.cpp  ScreenshotSelector.h  SettingsDialog.cpp  SettingsDialog.h  SidebarWidget.cpp  SidebarWidget.h  resources.qrc
src/utils/: ConfigManager.cpp  ConfigManager.h  ThemeManager.cpp  ThemeManager.h
